crates/format-docx/tests/snapshots/read_preserve__shadow_tables_simple_table.snap
---
source: crates/format-docx/tests/read_preserve.rs
expression: shadow_summary(SIMPLE_TABLE)
---
part_names:
  - "[Content_Types].xml"
  - _rels/.rels
  - docProps/app.xml
  - docProps/core.xml
  - docProps/custom.xml
  - word/_rels/document.xml.rels
  - word/document.xml
  - word/fontTable.xml
  - word/settings.xml
  - word/styles.xml
  - word/theme/theme1.xml
part_count: 11
document_xml_len: 6862
indexed_paragraph_count: 11
