crates/format-docx/tests/snapshots/read_preserve__shadow_tracked_comments.snap
---
source: crates/format-docx/tests/read_preserve.rs
expression: shadow_summary(TRACKED_COMMENTS)
---
part_names:
  - "[Content_Types].xml"
  - _rels/.rels
  - docProps/app.xml
  - docProps/core.xml
  - word/_rels/document.xml.rels
  - word/comments.xml
  - word/document.xml
  - word/fontTable.xml
  - word/settings.xml
  - word/styles.xml
  - word/theme/theme1.xml
part_count: 11
document_xml_len: 1820
indexed_paragraph_count: 2
